<resources>
    <string name="app_name">pooj-ClimateControl</string>
    <string name="activity_main_usuario">Usuário</string>
    <string name="activity_main_senha">Senha</string>
    <string name="activity_main_entrar">Entrar</string>
    <string name="activity_main_esqueci">Esqueci a senha.</string>
    <string name="activity_main_registrar">Registrar-se</string>
    <string name="activity_main_cadastrarEquipamento">Cadastrar Novo Equipamento</string>
    <string name="activity_main_falha_autenticacao">Usuário ou senha inválido!</string>
</resources>